# Ironsight-Dashboard

./: .gitignore  journal-testing.md
archery_dashboard/backend/: app.py  camera.py  config.py  database.py  mode_state.py  pose_udp_listener.py  requirements.txt  scoring.py  screenshot.py  session_manager.py  state.py  udp_listener.py
archery_dashboard/backend/data/: .gitignore
archery_dashboard/frontend/: package-lock.json  vite.config.js
archery_dashboard/frontend/src/: App.vue  router.js  style.css
archery_dashboard/frontend/src/components/: Navbar.vue  ScoreTable.vue  SessionConfigModal.vue  SessionDetailModal.vue  TargetView.vue
archery_dashboard/frontend/src/pages/: CalibrateView.vue  Dashboard.vue  PastSessions.vue
archery_dashboard/pico/: main.py  main_spi.py  spi_test.py  test_int_wiring.py  test_single_sensor.py
archery_dashboard/pico/spi_test_c/: CMakeLists.txt  spi_test.c
